--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
   <head>
-    <title>Обо мне</title>
+    <title>  Хащивского Игоря </title> 
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <header>
-      <a class="link-header" href="index.html">Главная</a>
+      <a class="link-header" href="leonov.html">Хащивского Игоря</a>
     </header>
     <main>
-      <h1>Хащивский Игорь</h1>
-      <ul>
-        <li>люблю играть в игры</li>
-        <li>катаюсь на самокате</li>
-        <li>делаю сайты</li>
-      </ul>
-      <img src="https://drive.google.com/thumbnail?id=12yzzITgjYdJIlo-mgvHYVrEKVqm5Cynr&sz=w1000" width="850px" height="599px"/>
+      <nav>
+        <a class="link-nav" href="mysites.html"><b>мои лучшие работы</b></a>
+        <a class="link-nav" href="info.html"><b>полезная информация</b></a>
+      </nav>
+      <h1>Web-sites<br/> developer</h1>
+      <p>разметка и стилизация</p>
+      <p>вёрстка сетчатых макетов</p>
+      <p>двумерные анимации и интерактивные элементы</p>
+      <p>мультимедиа на сайте</p>
+      <img src="/uploads/2021/04/carousel-1684591_0_1618254197.svg" width="830px" height="582px"/>
     </main>
     <footer>
       <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
